--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
   },
   "dependencies": {
     "@chec/commerce.js": "^2.8.0",
+    "@react-leaflet/universal-leaflet": "^1.0.1",
     "@stripe/react-stripe-js": "^1.4.1",
     "@stripe/stripe-js": "^1.13.0",
     "body-scroll-lock": "^2.6.4",
     "dotenv": "^8.2.0",
     "jwt-decode": "^3.1.2",
+    "leaflet": "^1.7.1",
     "moment": "^2.29.1",
     "netlify-plugin-onboarding": "^1.0.0",
     "next": "^11.1.3",
@@ -26,9 +28,12 @@
     "react": "17.0.2",
     "react-collapse": "^5.1.0",
     "react-dom": "17.0.2",
+    "react-leaflet": "^3.2.5",
+    "leaflet-defaulticon-compatibility": "^0.1.1",
     "react-lottie": "^1.2.3",
     "react-redux": "^7.2.5",
     "react-scroll": "^1.8.4",
+    "react-share": "^4.4.0",
     "react-transition-group": "^4.3.0",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
@@ -38,6 +43,8 @@
   "devDependencies": {
     "@chec/seeder": "^1.1.1",
     "eslint": "7.32.0",
-    "eslint-config-next": "11.1.2"
+    "eslint-config-next": "11.1.2",
+    "@iconify/icons-mdi": "^1.0.105",
+    "@iconify/react": "^1.1.3"
   }
 }
