--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "@react-leaflet/universal-leaflet": "^1.0.1",
     "@stripe/react-stripe-js": "^1.4.1",
     "@stripe/stripe-js": "^1.13.0",
+    "axios": "^0.25.0",
     "body-scroll-lock": "^2.6.4",
     "dotenv": "^8.2.0",
     "jwt-decode": "^3.1.2",
     "leaflet": "^1.7.1",
+    "leaflet-defaulticon-compatibility": "^0.1.1",
     "moment": "^2.29.1",
     "netlify-plugin-onboarding": "^1.0.0",
     "next": "^11.1.3",
@@ -29,7 +31,6 @@
     "react-collapse": "^5.1.0",
     "react-dom": "17.0.2",
     "react-leaflet": "^3.2.5",
-    "leaflet-defaulticon-compatibility": "^0.1.1",
     "react-lottie": "^1.2.3",
     "react-redux": "^7.2.5",
     "react-scroll": "^1.8.4",
